--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "papaparse": "^5.1.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-circular-progressbar": "^2.0.3",
+    "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-router": "^3.2.5",
     "react-router-dom": "^5.1.2",
