--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "oxylemon",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nitro003.github.io/oxylemon.git",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^2.2.0",
     "papaparse": "^5.1.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pre-deploy":"npm run build",
+    "deploy":"gh-page -h build"
   },
   "eslintConfig": {
     "extends": "react-app"
