--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "oxylemon",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nitro003.github.io/oxylemon.git",
+  "homepage": "https://nitro003.github.io/oxylemon",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
