--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^16.12.0",
     "react-router": "^3.2.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-web-notification": "^0.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
